--- a/assets/styles/components/card/product-card/_variables.scss
+++ b/assets/styles/components/card/product-card/_variables.scss
@@ -1,7 +1,7 @@
 $card-product-v-background: theme-get-color('secondary') !default;
 $card-product-v-content-color: theme-get-color('black') !default;
 
-$card-product-v-content-title-margin: 0 0 auto !default;
+$card-product-v-content-title-margin: 0 !default;
 $card-product-v-content-title-fontsize: 20px !default;
 $card-product-v-content-title-link-color: theme-get-color('black') !default;
 
