--- a/templates/partials/woocommerce/cart/shipping.html.twig
+++ b/templates/partials/woocommerce/cart/shipping.html.twig
@@ -1,6 +1,6 @@
 <tr class="woocommerce-shipping-totals shipping">
-    <th colspan="3" class="table--checkout--review-order--shipping-title">{{ package_name }}</th>
-    <td data-title="{{ package_name }}">
+    <th colspan="3" class="table--checkout--review-order--shipping-title">{{ __('Uitvoering', 'agws') }}</th>
+    <td data-title="{{ __('Uitvoering', 'agws') }}">
         {% if available_methods %}
             <ul id="shipping_method" class="woocommerce-shipping-methods">
                 {% for method in available_methods %}
