--- a/templates/partials/woocommerce/product/sidebar.html.twig
+++ b/templates/partials/woocommerce/product/sidebar.html.twig
@@ -1,6 +1,7 @@
 <aside class="product-sidebar">
     <span class="product-price" style="display: block">
         <span class="product-price-number">{{ product.get_price_html }}</span>
+        <small class="product-price-vat">ex BTW.</small>
     </span>
 
     <form method="GET" class="product-add-to-cart-form">
@@ -29,8 +30,8 @@
     {% endif %}
 
     <ol class="product-usp">
-        <li>Voeg dit product toe aan uw bestelling</li>
-        <li>Geef uw wensen op tijdens het afrekenen</li>
-        <li>Onze adviseurs nemen contact met u op voor een afspraak</li>
+        <li>Voeg dit product toe aan jouw bestelling</li>
+        <li>Geef jouw wensen op tijdens het afrekenen</li>
+        <li>Onze adviseurs nemen contact met je op voor een afspraak</li>
     </ol>
 </aside>
