--- a/templates/partials/woocommerce/variation/sidebar.html.twig
+++ b/templates/partials/woocommerce/variation/sidebar.html.twig
@@ -14,6 +14,7 @@
 
         <span class="product-price">
             <span class="product-price-number">{{ product.get_price_html }}</span>
+            <small class="product-price-vat">ex BTW.</small>
         </span>
 
         <div class="flex">
@@ -40,15 +41,15 @@
                     <i class="fas fa-circle fa-stack-2x" style="width: 2rem;"></i>
                     <i class="fas fa-check fa-stack-1x" style="color: #fff"></i>
                 </span>
-                Beschikbaar:
+                Beschikbaar
             </span>
         </p>
     {% endif %}
 
     <ol class="product-usp">
-        <li>Voeg dit product toe aan uw bestelling</li>
-        <li>Geef uw wensen op tijdens het afrekenen</li>
-        <li>Onze adviseurs nemen contact met u op voor een afspraak</li>
+        <li>Voeg dit product toe aan jouw bestelling</li>
+        <li>Geef jouw wensen op tijdens het afrekenen</li>
+        <li>Onze adviseurs nemen contact met je op voor een afspraak</li>
     </ol>
 </aside>
 
