--- a/templates/views/search.html.twig
+++ b/templates/views/search.html.twig
@@ -5,8 +5,8 @@
     <main class="container auto">
         <h1 class="page-title">
             {% if search_query %}
-                {{ __('Search Results') }} <span>{{ __('For', 'agws') }}: {{ search_query }}</span>
-                {% else %}
+                {{ __('Search Results') }} <span>{{ __('voor', 'agws') }}: {{ search_query }}</span>
+            {% else %}
                 {{ __('Search Results') }}
             {% endif %}
         </h1>
