[fix] buttons for ie
Signed-off-by: Mitch Hijlkema <6103741+Pridestalker@users.noreply.github.com>

--- a/assets/styles/components/button/_component.scss
+++ b/assets/styles/components/button/_component.scss
@@ -1,8 +1,7 @@
 %btn {
+  border: 0;
+  background: transparent;
   all: unset;
-  border: unset;
-  background: unset;
-  color: unset;
   border-radius: $btn-default-radius;
   padding: $btn-default-padding;
   color: $btn-default-color;
