--- a/assets/styles/components/card/product-card-horizontal/_component.scss
+++ b/assets/styles/components/card/product-card-horizontal/_component.scss
@@ -47,13 +47,16 @@
   right: 0;
   top: 0;
   bottom: 0;
-  width: 300px;
 }
 
 .product-card--h--content {
   padding: 2rem;
   max-width: 50%;
-  @media screen and (max-width: map-get($screens, 'md')) {
+  @include max-breakpoint('lg') {
+    max-width: 35%;
+  }
+
+  @include max-breakpoint('md') {
     max-width: 100%;
   }
 }
