--- a/templates/views/search.html.twig
+++ b/templates/views/search.html.twig
@@ -11,6 +11,7 @@
             {% endif %}
         </h1>
 
+        {% if posts %}
         <section class="grid">
             {% for post in posts %}
                 <article class="search-result col-6">
@@ -26,5 +27,10 @@
                 </article>
             {% endfor %}
         </section>
+        {% else %}
+        <p>
+            {{ __('Er zijn (nog) geen producten die aan deze zoekterm voldoen', 'agws') }}
+        </p>
+        {% endif %}
     </main>
 {% endblock %}
