--- a/templates/emails/woocommerce/customer-processing-order.html.twig
+++ b/templates/emails/woocommerce/customer-processing-order.html.twig
@@ -29,7 +29,7 @@
 <p>
     Je kunt de bestelling niet meer online wijzigingen omdat deze al in het bestelproces zit.
     Je kunt de afspraak wel annuleren door contact op te nemen met de klantenservice via 036 XXXX of
-    via WhatsApp [LINK].
+    via <a href="https://wa.me/31622456344">WhatsApp</a>.
 </p>
 
 <h2>
