added gdpr checkbox to checkout
Signed-off-by: Mitch Hijlkema <6103741+Pridestalker@users.noreply.github.com>

--- a/templates/emails/woocommerce/customer-processing-order.html.twig
+++ b/templates/emails/woocommerce/customer-processing-order.html.twig
@@ -28,7 +28,7 @@
 
 <p>
     Je kunt de bestelling niet meer online wijzigingen omdat deze al in het bestelproces zit.
-    Je kunt de afspraak wel annuleren door contact op te nemen met de klantenservice via 036 XXXX of
+    Je kunt de afspraak wel annuleren door contact op te nemen met de klantenservice via <a href="mailto:webstore@anteagroup.com">webstore@anteagroup.com</a> of
     via <a href="https://wa.me/31622456344">WhatsApp</a>.
 </p>
 
