Added check for IE

--- a/assets/styles/_shame.scss
+++ b/assets/styles/_shame.scss
@@ -13,3 +13,14 @@
 .optional {
   display: none;
 }
+
+.ie-only-banner {
+  position: fixed;
+  z-index: 9999;
+  background:
+  white;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
