--- a/templates/partials/header/topper.html.twig
+++ b/templates/partials/header/topper.html.twig
@@ -1,3 +1,14 @@
+<div class="js-ie-only-banner ie-only-banner" style="display: none">
+    <div class="container auto content">
+        <h2>
+            {{ __('Let op: Je gebruikt een verouderde browser.') }}
+        </h2>
+        <p>
+            {{ __('Deze browser is niet meer volledig ondersteund. Maak gebruik van een andere optie, zoals google chrome.', 'agws') }}
+        </p>
+    </div>
+</div>
+
 <!-- Header topper -->
 <header class="header content">
     <div class="container auto flex size-full">
