[fix] Made a mb_string check for 'belasting'

--- a/assets/styles/components/button/product-tabs/_component.scss
+++ b/assets/styles/components/button/product-tabs/_component.scss
@@ -7,7 +7,7 @@
 }
 
 .product-tabs {
-  all: unset;
+  @extend %btn;
   @each $border, $val in $tabs-product-borders {
     @if $val {
       border-#{$border}: $tabs-product-borderwidth $tabs-product-borderstyle $tabs-product-bordercolor;
