--- a/templates/partials/header/topper.html.twig
+++ b/templates/partials/header/topper.html.twig
@@ -4,7 +4,7 @@
             {{ __('Let op: Je gebruikt een verouderde browser.') }}
         </h2>
         <p>
-            {{ __('Deze browser is niet meer volledig ondersteund. Maak gebruik van een andere optie, zoals google chrome.', 'agws') }}
+            {{ __('Deze browser is niet meer volledig ondersteund. Maak gebruik van een andere optie, zoals Google Chrome.', 'agws') }}
         </p>
     </div>
 </div>
